--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
     "bootstrap": "4.6.0",
     "chart.js": "3.2.1",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
+    "jwt-decode": "^3.1.2",
     "node-sass": "6.0.0",
     "perfect-scrollbar": "1.5.1",
     "react": "17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-chartjs-2": "3.0.3",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.3.4",
+    "react-icons": "^4.2.0",
     "react-notification-alert": "0.0.13",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
