--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "bootstrap": "4.6.0",
     "chart.js": "3.2.1",
+    "date-fns": "^2.22.1",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
     "jwt-decode": "^3.1.2",
@@ -17,6 +18,7 @@
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-chartjs-2": "3.0.3",
+    "react-date-range": "^1.3.0",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.3.4",
     "react-icons": "^4.2.0",
