--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dropzone": "^11.3.4",
     "react-icons": "^4.2.0",
     "react-notification-alert": "0.0.13",
+    "react-pdf": "^5.3.0",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
